--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://vietanhcoder.github.io/react-exchange-realtime2",
   "name": "react-exchange-realtime2",
   "version": "0.1.0",
   "private": true,
@@ -7,6 +8,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "gh-pages": "^2.2.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-currency-flags": "^0.1.2",
@@ -19,6 +21,8 @@
     "styled-components": "^5.1.0"
   },
   "scripts": {
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d -build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
